# benchmarks

./: .cspell.project-words.txt  .editorconfig  .gitignore  .terraform_init  Makefile  README.md
.github/workflows/: build-and-push-docker.yml  editorconfig_check.yml  rust_ci.yml
.make/: rust.mk  targets-all.mk  targets-docker.mk  targets-python.mk  targets-rust.mk
server-web/: .gitignore  .package-make-targets  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt  schema.graphql  targets-server-web.mk
server-web/.cargo/: config.toml
server-web/.cargo-husky/hooks/: pre-commit
server-web/actix-rest/: .makerc  Cargo.toml  Makefile  README.md  openapi.yaml
server-web/actix-rest/examples/: endpoints.rs
server-web/actix-rest/src/: main.rs
server-web/axum-async-graphql/: Cargo.toml  README.md
server-web/axum-async-graphql/src/: main.rs
server-web/axum-graphql/: .makerc  Cargo.toml  Makefile  README.md
server-web/axum-graphql/src/: main.rs
server-web/axum-rest/: .makerc  Cargo.toml  Makefile
server-web/axum-rest/examples/: endpoints.rs
server-web/axum-rest/src/: main.rs
server-web/common/: Cargo.toml
server-web/common-example/: Cargo.toml
server-web/common-example/src/: lib.rs
server-web/common-graphql/: Cargo.toml
server-web/common-graphql/src/: lib.rs
server-web/common-rest/: Cargo.toml  openapi.yaml
server-web/common-rest/src/: lib.rs
server-web/common/src/: lib.rs
server-web/poem-rest/: .makerc  Cargo.toml  Makefile  README.md
server-web/poem-rest/examples/: endpoints.rs
server-web/poem-rest/src/: main.rs
