[package]
edition = "2021"
name    = "actix-rest"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   = "4.1.0"
common      = { path = "../common" }
common_rest = { path = "../common-rest" }

[dev-dependencies]
common-example = { path = "../common-example" }
tokio          = { version = "1", features = ["full"] }

[[example]]
name = "endpoints"
