[package]
name = "axum-async-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.8"
async-graphql-axum = "4.0.8"
axum = "0.5.15"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = "0.7.3"
