[package]
edition = "2021"
name    = "axum-graphql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-axum = "4.0.9"
axum               = "0.5.15"
common             = { path = "../common" }
common-graphql     = { path = "../common-graphql" }
tokio              = { version = "1.20.1", features = ["full"] }
tokio-util         = "0.7.3"
