[package]
edition = "2021"
name    = "axum-rest"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum        = "0.5.15"
common      = { path = "../common" }
common_rest = { path = "../common-rest" }
tokio       = { version = "1.20.1", features = ["full"] }
tokio-util  = "0.7.3"

[dev-dependencies]
common-example = { path = "../common-example" }
tokio          = { version = "1", features = ["full"] }

[[example]]
name = "endpoints"
