[package]
edition = "2021"
name    = "common-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum        = "0.5.15"
chrono      = "0.4.22"
common_rest = { path = "../common-rest" }
hyper       = { version = "0.14.20", features = ["full"] }
serde       = "1.0.145"
serde_json  = "1.0"
