[package]
name = "common-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.8"
async-stream = "0.3.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.83"

[lib]
name = "common_graphql"
path = "src/lib.rs"
