[package]
edition = "2021"
name    = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.cargo-husky]
default-features = false
features         = ["user-hooks"]
version          = "1"

[lib]
name = "common"
path = "src/lib.rs"
