[package]
edition = "2021"
name    = "poem-rest"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono       = "0.4.22"
common       = { path = "../common" }
common_rest  = { path = "../common-rest" }
poem         = "1.3.40"
poem-openapi = { version = "2.0.10", features = ["swagger-ui", "chrono"] }
serde_json   = "1.0.83"
tokio        = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
common-example = { path = "../common-example" }
tokio          = { version = "1", features = ["full"] }

[[example]]
name = "endpoints"
